--- a/templates/main/main.html
+++ b/templates/main/main.html
@@ -1,29 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../static/style.css" />
-
-  </head>
-
-  <body>
-    <div class="navbar">
-        <ul>
-          <li><a href="#atractivos">Atractivos</a></li>
-          <li><a href="#diferenciador">Diferenciadores</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </div>
-
-    <script SRC="../../static/style.js"></script>
-    <script
-      src="https://kit.fontawesome.com/bfe61dead8.js"
-      crossorigin="anonymous"
-    ></script>
-
-
+{% extends 'base.html' %}
+{%block title%} Main {%block title%}
+{%block contents%}
 <div class="backcv">
   <div class="inicio">
     <div class="box1">
@@ -125,6 +102,4 @@
     </footer>
   </div>
 </div>
-
-</body>
-</html>
+{%{% endblock %}%}
