--- a/templates/messages.html
+++ b/templates/messages.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <script SRC="../../static/style.js"></script>
+    <script SRC="../static/style.js"></script>
     <script
       src="https://kit.fontawesome.com/bfe61dead8.js"
       crossorigin="anonymous"
