--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../static/style.css"/>
+    <link rel="stylesheet" href="../static/style.css"/>
 
     <title>{% block title %}{% endblock %}</title>
   </head>
@@ -18,7 +18,7 @@
         </ul>
     </div>
     {% block contents %}{% endblock %}
-    <script SRC="../../static/style.js"></script>
+    <script SRC="../static/style.js"></script>
     <script
       src="https://kit.fontawesome.com/bfe61dead8.js"
       crossorigin="anonymous"
