--- a/templates/main.html
+++ b/templates/main.html
@@ -1,29 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../static/style.css" />
-
-  </head>
-
-  <body>
-    <div class="navbar">
-        <ul>
-          <li><a href="#atractivos">Atractivos</a></li>
-          <li><a href="#diferenciador">Diferenciadores</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </div>
-
-    <script SRC="../../static/style.js"></script>
-    <script
-      src="https://kit.fontawesome.com/bfe61dead8.js"
-      crossorigin="anonymous"
-    ></script>
-
-
+{% extends 'base.html' %}
+{% block title %} Main {% endblock %}
+{% block contents %}
 <div class="backcv">
   <div class="inicio">
     <div class="box1">
@@ -42,17 +19,17 @@
 
   <div class="Containers">
     <div class="MessageInfo">1 / 3</div>
-    <img src="../../static/atractivos/1.jpg" style="width:100%">
+    <img src="../static/atractivos/1.jpg" style="width:100%">
     </div>
 
     <div class="Containers">
       <div class="MessageInfo">2 / 3</div>
-      <img src="../../static/atractivos/2.jpg" style="width:100%">
+      <img src="../static/atractivos/2.jpg" style="width:100%">
     </div>
 
     <div class="Containers">
       <div class="MessageInfo">3 / 3</div>
-      <img src="../../static/atractivos/3.jpg" style="width:100%">
+      <img src="../static/atractivos/3.jpg" style="width:100%">
     </div>
   </div>
 </div>
@@ -98,7 +75,7 @@
   <div class="bloque_referencias">
     <div class="subdivmssgs">
       <h3 class="subdivmssgs_titulo">Andrea Alfaro</h3>
-      <img src="../../static/atractivos/Imagen1.jpg" class="imagen_ref" /><br />
+      <img src="../static/atractivos/Imagen1.jpg" class="imagen_ref" /><br />
       <p class="subdivmssgs_parrafo">Soy una persona integral, líder y responsable. Deseo acceder a una área de desarrollo sostenible o finanzas para contribuir de manera positiva a la sociedad. De esta forma, busco poner mis capacidades y competencias al servicio de los demás</p>
     </div>
 
@@ -125,6 +102,4 @@
     </footer>
   </div>
 </div>
-
-</body>
-</html>
+{% endblock %}
